--- a/Session 1.qmd
+++ b/Session 1.qmd
@@ -2,9 +2,8 @@
 title: "Session 1: R Essentials"
 format: html
 editor: visual
+bibliography: references.bib
 ---
-
-# Session 1: R Essentials {#sec-r-essentials}
 
 **Author Attribution**
 
@@ -31,11 +30,41 @@ This Chapter is copied from: Alexander, R. (2023). *Telling Stories with Data: W
     -   `lubridate` [@GrolemundWickham2011]
 -   `janitor` [@janitor]
 
+## **Install R and R Studio**
+
+R is maintained by an international team of developers who make the language available through the web page of [The Comprehensive R Archive Network](http://cran.r-project.org). The top of the web page provides three links for downloading R. Follow the link that describes your operating system: Windows, Mac, or Linux.
+
+**Windows**
+
+To install R on Windows, click the “Download R for Windows” link. Then click the “base” link. Next, click the first link at the top of the new page. This link should say something like “Download R 3.0.3 for Windows,” except the 3.0.3 will be replaced by the most current version of R. The link downloads an installer program, which installs the most up-to-date version of R for Windows. Run this program and step through the installation wizard that appears. The wizard will install R into your program files folders and place a shortcut in your Start menu. Note that you’ll need to have all of the appropriate administration privileges to install new software on your machine.
+
+**Mac**
+
+To install R on a Mac, click the “Download R for Mac” link. Next, click on the `R-3.0.3` package link (or the package link for the most current release of R). An installer will download to guide you through the installation process, which is very easy. The installer lets you customize your installation, but the defaults will be suitable for most users. I’ve never found a reason to change them. If your computer requires a password before installing new progams, you’ll need it here.
+
+**Linux**
+
+R comes preinstalled on many Linux systems, but you’ll want the newest version of R if yours is out of date. [The CRAN website](http://cran.r-project.org) provides files to build R from source on Debian, Redhat, SUSE, and Ubuntu systems under the link “Download R for Linux.” Click the link and then follow the directory trail to the version of Linux you wish to install on. The exact installation procedure will vary depending on the Linux system you use. CRAN guides the process by grouping each set of source files with documentation or README files that explain how to install on your system.
+
+:::: {type="note"}
+**32-bit Versus 64-bit**
+
+::: callout-note
+R comes in both 32-bit and 64-bit versions. Which should you use? In most cases, it won’t matter. Both versions use 32-bit integers, which means they compute numbers to the same numerical precision. The difference occurs in the way each version manages memory. 64-bit R uses 64-bit memory pointers, and 32-bit R uses 32-bit memory pointers. This means 64-bit R has a larger memory space to use (and search through).
+
+As a rule of thumb, 32-bit builds of R are faster than 64-bit builds, though not always. On the other hand, 64-bit builds can handle larger files and data sets with fewer memory management problems. In either version, the maximum allowable vector size tops out at around 2 billion elements. If your operating system doesn’t support 64-bit programs, or your RAM is less than 4 GB, 32-bit R is for you. The Windows and Mac installers will automatically install both versions if your system supports 64-bit R.
+:::
+::::
+
+**Opening R and RStudio**
+
+Now that you have both R and RStudio on your computer, you can begin using R by opening the RStudio program. Open RStudio just as you would any program, by clicking on its icon or by typing “RStudio” at the Windows Run prompt.
+
 ## R, RStudio, and Posit Cloud
 
 `R` and RStudio are complementary, but they are not the same thing. @vistransrep explain their relationship by analogy, where `R` is like an engine and RStudio is like a car---we can use engines in a lot of different situations, and they are not limited to being used in cars, but the combination is especially useful.
 
-### R
+**R**
 
 [`R`](https://www.r-project.org/) is an open-source and free programming language that is focused on general statistics. Free in this context does not refer to a price of zero, but instead to the freedom that the creators give users to largely do what they want with it (although it also does have a price of zero). This is in contrast with an open-source programming language that is designed for general purpose, such as `Python`, or an open-source programming language that is focused on probability, such as `Stan`. It was created by Ross Ihaka and Robert Gentleman at the University of Auckland in the 1990s, and traces its provenance to `S`, which was developed at Bell Labs in the 1970s. It is maintained by the R Core Team and changes to this "base" of code occur methodically and with concern given to different priorities.
 
@@ -43,13 +72,9 @@ Many people build on this stable base, to extend the capabilities of `R` to bett
 
 If you want to use a package, then you first need to install it on your computer, and then you need to load it when you want to use it. Dr Di Cook, Professor of Business Analytics at Monash University, describes this as analogous to a lightbulb. If you want light in your house, first you need to fit a lightbulb, and then you need to turn the switch on. Installing a package, say, `install.packages("tidyverse")`, is akin to fitting a lightbulb into a socket---you only need to do this once for each lightbulb. But then each time you want light you need to turn on the switch to the lightbulb, which in the `R` packages case, means drawing on your library, say, `library(tidyverse)`.
 
-::: callout-note
-## Shoulders of giants
+👉 To install a package in R, open R (not RStudio) on your computer.
 
-Dr Di Cook is Distinguished Professor of Statistics at Monash University. After earning a PhD in statistics from Rutgers University in 1993 where she focused on statistical graphics, she was appointed as an assistant professor at Iowa State University, being promoted to full professor in 2005, and in 2015 she moved to Monash. One area of her research is data visualization, especially interactive and dynamic graphics. @buja1996interactive which proposes a taxonomy of interactive data visualization and associated software XGobi, which is the focus of @ggobibook. @Cook1995 develops and explores the use of a dynamic graphical tool for exploratory data analysis and @Buja2009 develops a framework for evaluating visual statistical methods, where plots and human cognition stand in for test statistics and statistical tests, respectively. She is a Fellow of the American Statistical Association.
-:::
-
-To install a package on your computer (again, we will need to do this only once per computer) we use `install.packages()`.
+In the console, we type in `install.packages()`.
 
 ```{r}
 #| eval: false
@@ -58,7 +83,7 @@ To install a package on your computer (again, we will need to do this only once 
 install.packages("tidyverse")
 ```
 
-And then when we want to use the package, we use `library()`.
+And then when we want to use the package, we type in `library()`.
 
 ```{r}
 #| eval: false
@@ -67,17 +92,17 @@ And then when we want to use the package, we use `library()`.
 library(tidyverse)
 ```
 
-Having downloaded it, we can open `R` and use it directly. It is primarily designed to be interacted with through the command line. While this is functional, it can be useful to have a richer environment than the command line provides. In particular, it can be useful to install an Integrated Development Environment (IDE), which is an application that brings together various bits and pieces that will be used often. One common IDE for `R` is RStudio, although others such as Visual Studio are also used.
+R is primarily designed to be interacted with through the command line. While this is functional, it can be useful to have a richer environment than the command line provides. In particular, it is useful to install an Integrated Development Environment (IDE), which is an application that brings together various bits and pieces that will be used often. One common IDE for `R` is RStudio, although others such as Visual Studio are also used.
 
-### RStudio
+**RStudio**
 
 RStudio is distinct to `R`, and they are different entities. RStudio builds on top of `R` to make it easier to use R. This is in the same way that one could use the internet from the command line, but most people use a browser such as Chrome, Firefox, or Safari.
 
-RStudio is free in the sense that we do not pay for it. It is also free in the sense of being able to take the code, modify it, and distribute that code. But the maker of RStudio, Posit, is a company, albeit it a B Corp, and so it is possible that the current situation could change. It can be downloaded from Posit [here](https://www.rstudio.com/products/rstudio/).
+RStudio is free in the sense that we do not pay for it. It is also free in the sense of being able to take the code, modify it, and distribute that code. But the maker of RStudio, Posit, is a company, albeit it a B Corp, and so it is possible that the current situation could change.
 
 When we open RStudio it will look like @fig-first.
 
-![Opening RStudio for the first time](figures/01.png){#fig-first width="90%" fig-align="center"}
+![Opening RStudio for the first time](figures/01-03_r_essentials/01.png){#fig-first fig-align="center"}
 
 The left pane is a console in which you can type and execute `R` code line by line. Try it with 2+2 by clicking next to the prompt "\>", typing "2+2", and then pressing "return/enter".
 
@@ -88,16 +113,16 @@ The left pane is a console in which you can type and execute `R` code line by li
 2 + 2
 ```
 
-The pane on the top right has information about the environment. For instance, when we create variables a list of their names and some properties will appear there. Next to the prompt type the following code, replacing Rohan with your name, and again press enter.
+The pane on the top right has information about the environment. For instance, when we create variables a list of their names and some properties will appear there. Next to the prompt type the following code, replacing Jana with your name, and again press enter.
 
 ```{r}
 #| eval: true
 #| echo: true
 
-my_name <- "Rohan"
+my_name <- "Jana"
 ```
 
-As mentioned in @sec-fire-hose the `<-`, or "assignment operator", allocates `"Rohan"` to an object called "my_name". You should notice a new value in the environment pane with the variable name and its value.
+The `<-`, or "assignment operator", allocates `"Jana"` to an object called "my_name". You should notice a new value in the environment pane with the variable name and its value.
 
 The pane in the bottom right is a file manager. At the moment it should just have two files: an `R` History file and a `R` Project file. We will get to what these are later, but for now we will create and save a file.
 
@@ -110,7 +135,7 @@ Run the following code, without worrying too much about the details for now. You
 saveRDS(object = my_name, file = "my_first_file.rds")
 ```
 
-### Posit Cloud
+**Posit Cloud**
 
 While you can and should download RStudio to your own computer, initially we recommend using [Posit Cloud](https://posit.cloud). This is an online version of RStudio that is provided by Posit. We will use this so that you can focus on getting comfortable with `R` and RStudio in an environment that is consistent. This way you do not have to worry about what computer you have or installation permissions, amongst other things.
 
@@ -118,7 +143,7 @@ The free version of Posit Cloud is free, as in no financial cost. The trade-off 
 
 ## Getting started
 
-We will now start going through some code. Actively write this all out yourself.
+👉 We will now start going through some code. Actively write this all out yourself.
 
 While working line-by-line in the console is fine, it is easier to write out a whole script that can then be run. We will do this by making an `R` Script ("File" $\rightarrow$ "New File" $\rightarrow$ "R Script"). The console pane will fall to the bottom left and an `R` Script will open in the top left. We will write some code that will get all of the Australian federal politicians and then construct a small table about the genders of the prime ministers. Some of this code will not make sense at this stage, but just type it all out to get into the habit and then run it. To run the whole script, we can click "Run" or we can highlight certain lines and then click "Run" to just run those lines.
 
@@ -166,15 +191,7 @@ get_auspol("all") |> # Imports data from GitHub
 
 We can save this `R` Script as "my_first_r_script.R" ("File" $\rightarrow$ "Save As"). At this point, our workspace should look something like @fig-third.
 
-![After running an `R` Script](figures/03.png){#fig-third width="90%" fig-align="center"}
-
-One thing to be aware of is that each Posit Cloud workspace is essentially a new computer. Because of this, we need to install any package that we want to use for each workspace. For instance, before we can use the `tidyverse`, we need to install it with `install.packages("tidyverse")`. This contrasts with using one's own computer.
-
-A few final notes on Posit Cloud:
-
-1.  In the Australian politician's example, we got our data from the website GitHub using an `R` package, but we can get data into a workspace from a local computer in a variety of ways. One way is to use the "upload" button in the "Files" panel. Another is to use `readr` [@citereadr], which is part of the `tidyverse` [@tidyverse].
-2.  Posit Cloud allows some degree of collaboration. For instance, you can give someone else access to a workspace that you create and even both be in the same workspace at the one time. This could be useful for collaboration.
-3.  There are a variety of weaknesses of Posit Cloud, in particular the RAM limits. Additionally, like any web application, things break from time to time or go down.
+![After running an `R` Script](figures/01-03_r_essentials/03.png){#fig-third fig-align="center"}
 
 ## The `dplyr` verbs
 
@@ -819,129 +836,6 @@ class(ResumeNames$ethnicity)
 There are many ways for code to not run but having an issue with the class is always among the first things to check. Common issues are variables that we think should be "character" or "numeric" actually being "factor". And variables that we think should be "numeric" actually being "character".
 
 Finally, it is worth pointing out that the class of a vector is whatever the class of the content. In Python and other languages, a similar data structure to a vector is a "list". A "list" is a class of its own, and the objects in a "list" have their own classes (for instance, `["a", 1]` is an object of class "list" with entries of class "string" and "int"). This may be counter-intuitive to see that a vector is not its own class if you are coming to `R` from another language.
-
-### Simulating data
-
-Simulating data is a key skill for telling believable stories with data. In order to simulate data, we need to be able to randomly draw from statistical distributions and other collections. `R` has a variety of functions to make this easier, including: the normal distribution, `rnorm()`; the uniform distribution, `runif()`; the Poisson distribution, `rpois()`; the binomial distribution, `rbinom()`; and many others. To randomly sample from a collection of items, we can use `sample()`.
-
-When dealing with randomness, the need for reproducibility makes it important, paradoxically, that the randomness is repeatable. That is to say, another person needs to be able to draw the random numbers that we draw. We do this by setting a seed for our random draws using `set.seed()`.
-
-We could get observations from the standard normal distribution and put the those into a data frame.
-
-```{r}
-#| echo: true
-
-set.seed(853)
-
-number_of_observations <- 5
-
-simulated_data <-
-  data.frame(
-    person = c(1:number_of_observations),
-    std_normal_observations = rnorm(
-      n = number_of_observations,
-      mean = 0,
-      sd = 1
-    )
-  )
-
-simulated_data
-```
-
-We could then add draws from the uniform, Poisson, and binomial distributions, using `cbind()` to bring the columns of the original dataset and the new one together.
-
-```{r}
-#| echo: true
-
-simulated_data <-
-  simulated_data |>
-  cbind() |>
-  data.frame(
-    uniform_observations =
-      runif(n = number_of_observations, min = 0, max = 10),
-    poisson_observations =
-      rpois(n = number_of_observations, lambda = 100),
-    binomial_observations =
-      rbinom(n = number_of_observations, size = 2, prob = 0.5)
-  )
-
-simulated_data
-```
-
-Finally, we will add a favorite color to each observation with `sample()`.
-
-```{r}
-#| echo: true
-
-simulated_data <-
-  data.frame(
-    favorite_color = sample(
-      x = c("blue", "white"),
-      size = number_of_observations,
-      replace = TRUE
-    )
-  ) |>
-  cbind(simulated_data)
-
-simulated_data
-```
-
-We set the option "replace" to "TRUE" because we are only choosing between two items, but each time we choose we want the possibility that either are chosen. Depending on the simulation we may need to think about whether "replace" should be "TRUE" or "FALSE". Another useful optional argument in `sample()` is to adjust the probability with which each item is drawn. The default is that all options are equally likely, but we could specify particular probabilities if we wanted to with "prob". As always with functions, we can find more in the help file, for instance `?sample`.
-
-### `function()`, `for()`, and `apply()`
-
-`R` "is a functional programming language" [@advancedr]. This means that we foundationally write, use, and compose functions, which are collections of code that accomplish something specific.
-
-There are a lot of functions in `R` that other people have written, and we can use. Almost any common statistical or data science task that we might need to accomplish likely already has a function that has been written by someone else and made available to us, either as part of the base `R` installation or a package. But we will need to write our own functions from time to time, especially for more-specific tasks. We define a function using `function()`, and then assign a name. We will likely need to include some inputs and outputs for the function. Inputs are specified between round brackets. The specific task that the function is to accomplish goes between braces.
-
-```{r}
-print_names <- function(some_names) {
-  print(some_names)
-}
-
-print_names(c("rohan", "monica"))
-```
-
-We can specify defaults for the inputs in case the person using the function does not supply them.
-
-```{r}
-print_names <- function(some_names = c("edward", "hugo")) {
-  print(some_names)
-}
-
-print_names()
-```
-
-One common scenario is that we want to apply a function multiple times. Like many programming languages, we can use a `for()` loop for this. The look of a `for()` loop in `R` is similar to `function()`, in that we define what we are iterating over in the round brackets, and the function to apply in braces.
-
-<!-- ```{r} -->
-
-<!-- for (i in 1:3) { -->
-
-<!--   print(i) -->
-
-<!-- } -->
-
-<!-- ``` -->
-
-<!-- ```{r} -->
-
-<!-- x <- cbind(x1 = 66, x2 = c(4:1, 2:5)) -->
-
-<!-- dimnames(x)[[1]] <- letters[1:8] -->
-
-<!-- class(x) -->
-
-<!-- apply(x, 2, mean, trim = .2) -->
-
-<!-- ``` -->
-
-Because `R` is a programming language that is focused on statistics, we are often interested in arrays or matrices. We use `apply()` to apply a function to rows ("MARGIN = 1") or columns ("MARGIN = 2").
-
-```{r}
-simulated_data
-apply(X = simulated_data, MARGIN = 2, FUN = unique)
-```
 
 ## Making graphs with `ggplot2`
 
